--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 </p>
             </div>
         </div>
-        <div class="event-item details-btns">
+        <div class="event-details 5-event">
             <i class="fa fa-3x fa-times modal-close-btn" eventNo="5" aria-hidden="true"></i>
             <div class="details">
                 <h1>CS Go</h1>
