--- a/index.html
+++ b/index.html
@@ -320,10 +320,10 @@
         <div class="event-details 6-event">
             <i class="fa fa-3x fa-times modal-close-btn" eventNo="6" aria-hidden="true"></i>
             <div class="details">
-                <h1>FIFA 15</h1>
+                <h1>NFS</h1>
                 <div class="details-card">
                     <div class="details-item details-img">
-                        <img style="height:90%" src="./img/events/fifa-15.jpeg" alt="Event">
+                        <img style="height:90%" src="./img/events/nfs.jpg" alt="Event">
                     </div>
                     <div class="details-item details-category">
                         <h5>Details</h5>
@@ -341,7 +341,7 @@
                             <tr>
                                 <td class="bold">Registration Fee</td>
                                 <td>:</td>
-                                <td>Rs.75/- per head</td>
+                                <td>Rs.40/- per head</td>
                             </tr>
 
                         </table>
@@ -351,7 +351,7 @@
                     </div>
                     <div class="details-item details-rules">
                         <div>
-                            In life, as in football, you won't go far unless you know where the goalposts are.
+                            ...
                         </div>
                         <div class="prizeMoney">
                             <h5>PRIZE MONEY</h5>
@@ -361,7 +361,7 @@
 
                     </div>
                     <div class="details-item details-btns">
-                        <button class="btn details-btn" id="fifaBtn">Rules</button>
+                        <button class="btn details-btn" id="nfsBtn">Rules</button>
                         <button class="btn details-btn RegisterBtn">Register</button>
                         <div class="bold green small-font">(OFFLINE REGISTRATION DESK IS ALSO AVAILABLE TO REGISTER DIRECTLY ON THE EVENT DATE)</div>
                         <div class="bold red small-font">* Prize money is subject to change based on the number of participants</div>
@@ -488,15 +488,15 @@
                     <div eventNo="6" data-wow-duration="1s" class="event wow slideInRight">
                         <div class="card">
                             <div class="card-item card-front">
-                                <img src="./img/events/fifa-15.jpeg" alt="fifa-15">
+                                <img src="./img/events/nfs.jpg" alt="NFS">
                                 <div class="headText">
-                                    <p>fifa 15</p>
+                                    <p>NFS</p>
                                 </div>
                             </div>
                             <div class="card-item card-back">
-                                <img src="./img/events/fifa-15.jpeg" alt="fifa-15">
+                                <img src="./img/events/nfs.jpg" alt="NFS">
                                 <div class="eventName">
-                                    <p>fifa 15</p>
+                                    <p>NFS</p>
                                 </div>
                                 <div class="headText">
                                     <p>Know More</p>
@@ -732,7 +732,7 @@
         const registerUrl = 'https://goo.gl/forms/h7NmKvRsETvQdhDV2';
         const codeStromUrl = 'https://drive.google.com/open?id=1T6hdXMUWOAnq43GYyxEaQkmUOuuQ7Tjo';
         const csGoUrl = 'https://drive.google.com/open?id=1W-ozeGOEu08jmqWxOjCTwKAui5KnFzDU';
-        const fifaUrl = 'https://drive.google.com/open?id=1vAflCxE2pYFOG6hemUqN8QjE98zax9to';
+        const nfsUrl = 'https://drive.google.com/open?id=1vAflCxE2pYFOG6hemUqN8QjE98zax9to';
         const photoUrl = 'https://drive.google.com/open?id=1ce5Z3hqNUSCdbCC8aCeMFEGsiuJ0avhL';
         const bmaUrl = 'https://drive.google.com/open?id=1Td5-xu8I70A_JRKNa-g7SKywqua-g6Wi';
         const techUrl = 'https://drive.google.com/open?id=1yPZypm1d6kkrBSFiUJAIUOqrr8MOuPHX';
@@ -740,7 +740,7 @@
 
         document.getElementById('csGoBtn').onclick = () => window.open(csGoUrl, '_blank');
         document.getElementById('codeStromBtn').onclick = () => window.open(codeStromUrl, '_blank');
-        document.getElementById('fifaBtn').onclick = () => window.open(fifaUrl, '_blank');
+        document.getElementById('nfsBtn').onclick = () => window.open(nfsUrl, '_blank');
         document.getElementById('photoBtn').onclick = () => window.open(photoUrl, '_blank');
         document.getElementById('bmaBtn').onclick = () => window.open(bmaUrl, '_blank');
         document.getElementById('techBtn').onclick = () => window.open(techUrl, '_blank');
