--- a/index.html
+++ b/index.html
@@ -264,10 +264,10 @@
         <div class="event-details 5-event">
             <i class="fa fa-3x fa-times modal-close-btn" eventNo="5" aria-hidden="true"></i>
             <div class="details">
-                <h1>CS Go</h1>
+                <h1>CS 1.6</h1>
                 <div class="details-card">
                     <div class="details-item details-img">
-                        <img src="./img/events/cs-go.jpg" alt="Event">
+                        <img src="./img/events/cs.jpg" alt="Event">
                     </div>
                     <div class="details-item details-category">
                         <h5>Details</h5>
@@ -285,7 +285,7 @@
                             <tr>
                                 <td class="bold">Registration Fee</td>
                                 <td>:</td>
-                                <td>Rs.400/- per team</td>
+                                <td>Rs.250/- per team</td>
                             </tr>
                             <tr>
                                 <td class="bold">Max member in a team</td>
@@ -304,12 +304,12 @@
                         </div>
                         <div class="prizeMoney">
                             <h5>PRIZE MONEY</h5>
-                            <p>1st Prize: INR 6,000/-*</p>
-                            <p>2nd Prize: INR 3,000/-*</p>
+                            <p>1st Prize: INR 4,000/-*</p>
+                            <p>2nd Prize: INR 2,000/-*</p>
                         </div>
                     </div>
                     <div class="details-item details-btns">
-                        <button class="btn details-btn" id="csGoBtn">Rules</button>
+                        <button class="btn details-btn" id="csBtn">Rules</button>
                         <button class="btn details-btn RegisterBtn">Register</button>
                         <div class="bold green small-font">(OFFLINE REGISTRATION DESK IS ALSO AVAILABLE TO REGISTER DIRECTLY ON THE EVENT DATE)</div>
                         <div class="bold red small-font">* Prize money is subject to change based on the number of participants</div>
@@ -469,15 +469,15 @@
                     <div eventNo="5" data-wow-duration="1s" class="event wow fadeInUp">
                         <div class="card">
                             <div class="card-item card-front">
-                                <img src="./img/events/cs-go.jpg" alt="cs-go">
+                                <img src="./img/events/cs.jpg" alt="cs-go">
                                 <div class="headText">
-                                    <p>cs go</p>
+                                    <p>cs 1.6</p>
                                 </div>
                             </div>
                             <div class="card-item card-back">
-                                <img src="./img/events/cs-go.jpg" alt="cs-go">
+                                <img src="./img/events/cs.jpg" alt="cs-go">
                                 <div class="eventName">
-                                    <p>cs go</p>
+                                    <p>cs 1.6</p>
                                 </div>
                                 <div class="headText">
                                     <p>Know More</p>
@@ -731,14 +731,14 @@
         wow.init();
         const registerUrl = 'https://goo.gl/forms/h7NmKvRsETvQdhDV2';
         const codeStromUrl = 'https://drive.google.com/open?id=1T6hdXMUWOAnq43GYyxEaQkmUOuuQ7Tjo';
-        const csGoUrl = 'https://drive.google.com/open?id=1W-ozeGOEu08jmqWxOjCTwKAui5KnFzDU';
+        const csUrl = 'https://drive.google.com/open?id=1W-ozeGOEu08jmqWxOjCTwKAui5KnFzDU';
         const nfsUrl = 'https://drive.google.com/open?id=1vAflCxE2pYFOG6hemUqN8QjE98zax9to';
         const photoUrl = 'https://drive.google.com/open?id=1ce5Z3hqNUSCdbCC8aCeMFEGsiuJ0avhL';
         const bmaUrl = 'https://drive.google.com/open?id=1Td5-xu8I70A_JRKNa-g7SKywqua-g6Wi';
         const techUrl = 'https://drive.google.com/open?id=1yPZypm1d6kkrBSFiUJAIUOqrr8MOuPHX';
         const eventDate = '10.03.2018';
 
-        document.getElementById('csGoBtn').onclick = () => window.open(csGoUrl, '_blank');
+        document.getElementById('csBtn').onclick = () => window.open(csUrl, '_blank');
         document.getElementById('codeStromBtn').onclick = () => window.open(codeStromUrl, '_blank');
         document.getElementById('nfsBtn').onclick = () => window.open(nfsUrl, '_blank');
         document.getElementById('photoBtn').onclick = () => window.open(photoUrl, '_blank');
