--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                                 </div>
                             </div>
                             <div class="card-item card-back">
-                                <img src="./img/events/cs.jpg" alt="cs-go">
+                                <img src="./img/events/CS.jpg" alt="cs-go">
                                 <div class="eventName">
                                     <p>cs 1.6</p>
                                 </div>
