--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                     <div eventNo="5" data-wow-duration="1s" class="event wow fadeInUp">
                         <div class="card">
                             <div class="card-item card-front">
-                                <img src="./img/events/cs.jpg" alt="cs-go">
+                                <img src="./img/events/CS.jpg" alt="cs-go">
                                 <div class="headText">
                                     <p>cs 1.6</p>
                                 </div>
